# grid2grid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: grid2gridConfig.cmake
examples/: CMakeLists.txt  parallel_scalapack_submatrix.cpp  scalapack2scalapack.cpp  scalapack_submatrix.cpp  transform_test.cpp
libs/: CMakeLists.txt  options.hpp
src/: CMakeLists.txt  block.cpp  block.hpp  communication_data.cpp  communication_data.hpp  grid2D.cpp  grid2D.hpp  grid_cover.cpp  grid_cover.hpp  grid_layout.hpp  interval.cpp  interval.hpp  math_utils.hpp  memory_utils.hpp  mpi_type_wrapper.hpp  scalapack_layout.cpp  scalapack_layout.hpp  transform.cpp  transform.hpp
src/grid2grid/: CMakeLists.txt  block.cpp  block.hpp  cantor_mapping.hpp  comm_volume.hpp  communication_data.cpp  communication_data.hpp  grid2D.cpp  grid2D.hpp  grid_cover.cpp  grid_cover.hpp  grid_layout.hpp  interval.cpp  interval.hpp  memory_pool.hpp  memory_utils.hpp  mpi_type_wrapper.hpp  profiler.hpp  rank_reordering.hpp  ranks_reordering.cpp  ranks_reordering.hpp  scalapack_layout.cpp  scalapack_layout.hpp  tiling_manager.hpp  transform.cpp  transform.hpp  transformer.hpp  utils.hpp
